--- a/hello.html
+++ b/hello.html
@@ -10,5 +10,6 @@
 <body>
 <a href=""><img src="" alt=""></a>
 <button>Click Here!</button>
+    // Ctl+ shift + P: cai dat packit de su dung phan men nhanh hown
 </body>
 </html>
