--- a/hello.html
+++ b/hello.html
@@ -11,5 +11,12 @@
 <a href=""><img src="" alt=""></a>
 <button>Click Here!</button>
     // Ctl+ shift + P: cai dat packit de su dung phan men nhanh hown
+<p>Hôm nay ăn gì</p>
+<ul>
+    <li>Thịt luộc</li>
+    <li>Rau muống</li>
+    <li>Nước chấm</li>
+
+</ul>
 </body>
 </html>
